// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPRouterWithSwaggerUI should be bypassed with no debug env 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
  ],
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Time service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "HTTP Transaction initialized.",
    ],
    Array [
      "HTTP Router initialized.",
    ],
    Array [
      "Closing HTTP server.",
    ],
    Array [
      "HTTP server closed",
    ],
    Array [
      "Cancelling pending timeouts:",
      0,
    ],
  ],
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      "HTTP Server listening at \\"http://localhost:8888\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should work 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
  ],
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Time service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "HTTP Transaction initialized.",
    ],
    Array [
      "HTTP Router initialized.",
    ],
    Array [
      "Closing HTTP server.",
    ],
    Array [
      "HTTP server closed",
    ],
    Array [
      "Cancelling pending timeouts:",
      0,
    ],
  ],
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      "Serving the API docs: http://localhost:888/docs?url=http%3A%2F%2Flocalhost%3A888%2Fv1%2FopenAPI",
    ],
    Array [
      "HTTP Server listening at \\"http://localhost:8888\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
}
`;
